--- a/src/main/resources/ttime.properties
+++ b/src/main/resources/ttime.properties
@@ -1,2 +1,19 @@
 mailru.timing.config.title=Mail.Ru timing configuration
-
+mailru.timing.config.header=Configure work days and work time
+mailru.timing.keeper.cf.nostarted=Timing is not started
+mailru.timing.calcer.cf.started=The issue has been started. The total logged time is "{0}"
+mailru.timing.calcer.cf.days=Work days
+mailru.timing.calcer.cf.startday=Start work day
+mailru.timing.calcer.cf.endday=End work day
+mailru.timing.config.monday=Monday
+mailru.timing.config.tuesday=Tuesday
+mailru.timing.config.wednesday=Wednesday
+mailru.timing.config.thursday=Thursday
+mailru.timing.config.friday=Friday
+mailru.timing.config.saturday=Saturday
+mailru.timing.config.sunday=Sunday
+mailru.timing.config.access.error=Only "jira-administrators" have access to this page
+mailru.timing.config.success=Data was stored successfully
+mailru.timing.config.error=Error
+mailru.timing.config.error.formattime=Time values must be number from 0 to 23 and start time must be less than end time
+mailru.timing.config.error.timevalue=Time values must be number from 0 to 23 and start time must be less than end time
